RELEASE 0.6.9 (February 17, 2011)
CHANGES SINCE 0.6.8
===============================================================================
MAJOR CHANGES:
 * Support for most new job types (with icons!)
KNOWN ISSUES:
 * Still a few job types that are not supported (mostly due to bugs)

RELEASE 0.6.8 (February 16, 2011)
CHANGES SINCE 0.6.7
===============================================================================
MAJOR CHANGES:
 * Support for 0.31.19 (graphics + legacy versions)
 * Added Skills, Labors, and Professions for Shearing, Spinning, Pottery, Glazing, Pressing, Bee Keeping and Wax Working
KNOWN ISSUES:
 * Jobs for new professions are not displayed
  
RELEASE 0.6.7 (November 24, 2010)
CHANGES SINCE 0.6.6
===============================================================================
BUG FIXES:
 * Fixed issue 305 - Fix for undead dwarf flag (Live dwarves not showing up)
 
RELEASE 0.6.6 (November 16, 2010)
CHANGES SINCE 0.6.5
===============================================================================
MAJOR CHANGES:
 * Support for 0.31.18 (graphics + legacy versions)
 * Started generating debian packages for Dwarf Therapist.  See wiki for repositories
 * Implemented Feature 272 - Ability to clear user settings from File menu
 * Implemented Feature 231 - Option to hide children and babies
 * Implemented Feature 300 - Group by squad
  
BUG FIXES:
 * Fixed issue 297 - Unable to run DT on Ubuntu 10-10
 * Fixed issue 298 - Unable to connect DT to DF (ptrace issue)
 * Fixed issue 263 - Tabs not showing up
 * Fixed issue 247 - No compiling instructions
 * Fixed issue 291 - Compilation errors in qt 4.7
 * Fixed issue 301 - Ghostly Dwarves appear on DT
 * Fixed issue 273 - Window title for Scanner Dialog
 * Fixed issue 270 - Cancelling nickname change wipes nickname anyway
 
RELEASE 0.6.5 (November 11, 2010)
CHANGES SINCE 0.6.4
===============================================================================
MAJOR CHANGES: